// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/CardHeader default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
      size="md"
    >
      Some Title
    </h4>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/CardHeader with big text size 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3 svg {
  display: block;
}

.c3 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3:hover {
  background-color: rgb(33,18,94);
}

.c3:hover svg path {
  fill: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 1.125rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
      size="lg"
    >
      Some Title
    </h4>
    <div
      className="icon_button c3"
      data-cy="icon_button"
      onClick={[Function]}
    >
      <svg
        height={30}
        viewBox="0 0 32 32"
        width={30}
      >
        <path
          d="M12.35,3.23h7.3a1.62,1.62,0,0,0,1.61-1.61A1.62,1.62,0,0,0,19.65,0h-7.3c-.88-.15-1.46.58-1.46,1.6A1.42,1.42,0,0,0,12.35,3.23ZM27.24,4.69H4.9A1.63,1.63,0,0,0,3.44,6.44,1.57,1.57,0,0,0,4.9,7.9H24V27a1.62,1.62,0,0,1-1.6,1.61H9.57A1.62,1.62,0,0,1,8,27V12.72a1.61,1.61,0,0,0-3.21,0V27.18A4.76,4.76,0,0,0,9.57,32H22.28a4.77,4.77,0,0,0,4.82-4.82V8.05A1.63,1.63,0,0,0,28.56,6.3C28.56,5.42,28.12,5,27.24,4.69Z"
          fill="#00B0CA"
        />
      </svg>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/molecules/CardHeader with close icon 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
      size="md"
    >
      Some Title
    </h4>
    <svg
      className="fa-cursor-pointer overlay__header__close-icon"
      color="#452FBA"
      fill="#452FBA"
      height={32}
      onClick={[Function]}
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
      />
    </svg>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/CardHeader with custom icon 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  margin: 0;
  cursor: pointer;
  width: 36px;
  height: 36px;
  background-color: #fff;
  border-radius: 50%;
  border-width: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3 svg {
  display: block;
}

.c3 svg path {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c3:hover {
  background-color: rgb(33,18,94);
}

.c3:hover svg path {
  fill: #fff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
      size="md"
    >
      Some Title
    </h4>
    <div
      className="icon_button c3"
      data-cy="icon_button"
      onClick={[Function]}
    >
      <svg
        height={24}
        viewBox="0 0 32 32"
        width={24}
      >
        <path
          d="M30.61,1.39A4.78,4.78,0,0,0,27.24,0h0a4.77,4.77,0,0,0-3.35,1.39L9.32,16a1.63,1.63,0,0,0-.39.64L6.72,23.22a1.62,1.62,0,0,0,1,2.06,1.52,1.52,0,0,0,1,0l6.63-2.21a1.63,1.63,0,0,0,.64-.39L30.61,8.12a4.77,4.77,0,0,0,0-6.73ZM28.74,4.76a1.52,1.52,0,0,1-.44,1.06L14,20.1l-3.18,1.06L11.9,18,26.18,3.71a1.47,1.47,0,0,1,1.06-.44h0a1.5,1.5,0,0,1,1.06.44A1.48,1.48,0,0,1,28.74,4.76ZM27.58,17.11V28.16A3.85,3.85,0,0,1,23.74,32H3.84A3.84,3.84,0,0,1,0,28.16V6.05A3.84,3.84,0,0,1,3.84,2.21H17.1a1.63,1.63,0,1,1,0,3.26H3.84a.58.58,0,0,0-.58.58V28.16a.58.58,0,0,0,.58.58h19.9a.58.58,0,0,0,.58-.58v-11a1.63,1.63,0,1,1,3.26,0Z"
          fill="#00B0CA"
        />
      </svg>
    </div>
  </div>
  <div
    className="c4"
  />
</div>
`;

exports[`Storyshots @components/molecules/CardHeader with divider 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h4
      className="c2"
      size="md"
    >
      Some Title
    </h4>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/CardHeader with paragraph text style 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c2 {
  font-size: 0.875rem;
  color: #7d7d7d;
  padding-right: 0.6rem;
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <p
      className="c2"
    >
      Some Title
    </p>
  </div>
  <div
    className="c3"
  />
</div>
`;
